[gd_scene load_steps=14 format=2]

[ext_resource path="res://Store/storeMain.gd" type="Script" id=1]
[ext_resource path="res://Resources/Textures/leftArrow.png" type="Texture" id=2]
[ext_resource path="res://Resources/Textures/rightArrow.png" type="Texture" id=3]
[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Textures/diamondIcon.png" type="Texture" id=5]
[ext_resource path="res://Resources/Textures/xTexture.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 4 )

[node name="storeMain" type="Node"]
script = ExtResource( 1 )

[node name="storeCanvasLayer" type="CanvasLayer" parent="."]

[node name="storeControl" type="Control" parent="storeCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.66968
margin_right = -2.66968
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skinSelector" type="Control" parent="storeCanvasLayer/storeControl"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -560.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightButton" type="TextureButton" parent="storeCanvasLayer/storeControl/skinSelector"]
margin_left = 805.0
margin_top = 90.0
margin_right = 930.0
margin_bottom = 215.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftButton" type="TextureButton" parent="storeCanvasLayer/storeControl/skinSelector"]
margin_left = 150.0
margin_top = 90.0
margin_right = 275.0
margin_bottom = 215.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skinTextureRectClipper" type="Control" parent="storeCanvasLayer/storeControl/skinSelector"]
margin_left = 390.0
margin_right = 690.0
margin_bottom = 300.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skinTextureRect" type="TextureRect" parent="storeCanvasLayer/storeControl/skinSelector/skinTextureRectClipper"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buySkinButton" type="Button" parent="storeCanvasLayer/storeControl/skinSelector"]
margin_left = 415.0
margin_top = 360.0
margin_right = 665.0
margin_bottom = 485.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iconTexture" type="TextureRect" parent="storeCanvasLayer/storeControl/skinSelector/buySkinButton"]
margin_left = 12.5
margin_top = 22.5
margin_right = 92.5
margin_bottom = 102.5
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="priceLabel" type="Label" parent="storeCanvasLayer/storeControl/skinSelector/buySkinButton"]
margin_left = 100.0
margin_right = 240.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondsInfo" type="MarginContainer" parent="storeCanvasLayer/storeControl"]
margin_right = 425.0
margin_bottom = 160.0
custom_constants/margin_top = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondsInfoContainer" type="Control" parent="storeCanvasLayer/storeControl/diamondsInfo"]
margin_left = 30.0
margin_top = 30.0
margin_right = 425.0
margin_bottom = 160.0

[node name="diamondsInfoBackground" type="Panel" parent="storeCanvasLayer/storeControl/diamondsInfo/diamondsInfoContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondsInfoLabel" type="Label" parent="storeCanvasLayer/storeControl/diamondsInfo/diamondsInfoContainer/diamondsInfoBackground"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -257.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondsInfoIcon" type="TextureRect" parent="storeCanvasLayer/storeControl/diamondsInfo/diamondsInfoContainer"]
margin_left = 35.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 115.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xButtonMargin" type="MarginContainer" parent="storeCanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_bottom = 180.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xButton" type="TextureButton" parent="storeCanvasLayer/xButtonMargin"]
margin_left = 50.0
margin_top = 50.0
margin_right = 130.0
margin_bottom = 130.0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="skinStatsWidget" type="MarginContainer" parent="storeCanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -992.0
margin_bottom = -405.0
custom_constants/margin_right = 50
custom_constants/margin_left = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skinStatsPanel" type="Panel" parent="storeCanvasLayer/skinStatsWidget"]
margin_left = 50.0
margin_right = 1030.0
margin_bottom = 587.0
custom_styles/panel = SubResource( 5 )

[node name="skinStatsMargin" type="MarginContainer" parent="storeCanvasLayer/skinStatsWidget"]
margin_left = 50.0
margin_right = 1030.0
margin_bottom = 587.0
custom_constants/margin_right = 50
custom_constants/margin_top = 175
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="skinStatsVSplitter" type="VBoxContainer" parent="storeCanvasLayer/skinStatsWidget/skinStatsMargin"]
margin_left = 50.0
margin_top = 175.0
margin_right = 930.0
margin_bottom = 537.0

[node name="multiplierLabel" type="Label" parent="storeCanvasLayer/skinStatsWidget/skinStatsMargin/skinStatsVSplitter"]
margin_right = 880.0
margin_bottom = 118.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
valign = 1

[node name="livesLabel" type="Label" parent="storeCanvasLayer/skinStatsWidget/skinStatsMargin/skinStatsVSplitter"]
margin_top = 122.0
margin_right = 880.0
margin_bottom = 240.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
valign = 1

[node name="recuperationLabel" type="Label" parent="storeCanvasLayer/skinStatsWidget/skinStatsMargin/skinStatsVSplitter"]
margin_top = 244.0
margin_right = 880.0
margin_bottom = 362.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
valign = 1

[node name="skinStatsTitleContainer" type="Control" parent="storeCanvasLayer/skinStatsWidget"]
margin_left = 50.0
margin_right = 1030.0
margin_bottom = 587.0

[node name="skinStatsTitle" type="Label" parent="storeCanvasLayer/skinStatsWidget/skinStatsTitleContainer"]
anchor_right = 1.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skinTextureScrollTween" type="Tween" parent="."]

[node name="rightButtonTween" type="Tween" parent="."]

[node name="leftButtonTween" type="Tween" parent="."]

[node name="skinTextureScaleTween" type="Tween" parent="."]

[node name="buySkinButtonTween" type="Tween" parent="."]

[node name="skinUnlockAlphaTween" type="Tween" parent="."]

[node name="skinUnlockRotationTween" type="Tween" parent="."]

[node name="diamondNumberTween" type="Tween" parent="."]

[connection signal="pressed" from="storeCanvasLayer/storeControl/skinSelector/rightButton" to="." method="_on_rightButton_pressed"]
[connection signal="pressed" from="storeCanvasLayer/storeControl/skinSelector/leftButton" to="." method="_on_leftButton_pressed"]
[connection signal="pressed" from="storeCanvasLayer/storeControl/skinSelector/buySkinButton" to="." method="_on_buySkinButton_pressed"]
[connection signal="pressed" from="storeCanvasLayer/xButtonMargin/xButton" to="." method="_on_xButton_pressed"]
